# kdapp

./: .gitignore  ATTRIBUTIONS.md  CLAUDE.md
claude-docs/: README.md
claude-docs/architecture/: episode-lifecycle.md  kasperience-patterns.md  overview.md
claude-docs/implementation/: phase1-poc.md
claude-docs/progress/daily-notes/: 2025-01-13.md  2025-07-13-final.md  2025-07-13-session2.md  2025-07-13-update.md  2025-07-13.md  2025-07-14.md
claude-docs/specs/: nlp-interface.md
nl-kdapp/: .env.example  .gitignore  Cargo.toml  OPENROUTER.md  README.md
nl-kdapp/src/: main.rs
nl-kdapp/src/bridge/: commands.rs  mod.rs  transactions.rs
nl-kdapp/src/deployment/: compiler.rs  deployer.rs  mod.rs
nl-kdapp/src/episodes/: mod.rs
nl-kdapp/src/generation/: episode_builder.rs  mod.rs  template_engine.rs
nl-kdapp/src/kdapp_integration/: mod.rs
nl-kdapp/src/nlp/: mod.rs  openrouter.rs  simple_parser.rs
nl-kdapp/src/runtime/: executor.rs  manager.rs  mod.rs  storage.rs
nl-kdapp/src/session/: mod.rs  token.rs
nl-kdapp/src/templates/: base_episode.rs  game_traits.rs  mod.rs  tictactoe.rs
nl-kdapp/src/utils/: crypto.rs  kaspa.rs  mod.rs
nl-kdapp/src/wallet/: mod.rs  rate_limiter.rs  server_wallet.rs  utxo_manager.rs
nl-kdapp/src/web/: handlers.rs  mod.rs  websocket.rs
nl-kdapp/src/web/static/: app.js  index.html  style.css
