[package]
name = "nl-kdapp"
version = "0.1.0"
edition = "2021"
authors = ["Natural Language kdapp Interface Contributors"]
description = "Natural language interface for generating kdapp Episodes"
license = "ISC"

[dependencies]
# Core kdapp framework
kdapp = { path = "../kdapp" }

# Kaspa dependencies (for wallet and transactions)
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.0" }

# Web framework (following kasperience's pattern)
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.0"
bincode = "1.3"

# Crypto
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptography (for session management)
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"

# HTTP client (for AI integration later)
reqwest = { version = "0.11", features = ["json"] }

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# Async utilities
futures = "0.3"
futures-util = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Text processing
regex = "1.10"

# Random number generation
rand = "0.8"

# Hex encoding/decoding
faster-hex = "0.9"

# Environment variables
dotenv = "0.15"

# Process management (for compilation)
tokio-process = "0.2"
tempfile = "3.9"

[dev-dependencies]
# Testing
tokio-test = "0.4"
wiremock = "0.6"
assert_matches = "1.5"

[workspace]
members = ["."]

[[bin]]
name = "nl-kdapp"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1